# pyomdbapi

./: .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  pytest.yml  ruff-format.yml  ruff-lint.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: code.rst  conf.py  quickstart.rst
omdb/: __init__.py  exceptions.py  omdb.py  utilities.py
tests/: test_omdb.py
tests/cassettes/bad_apikey/: Band of Brothers.yaml
tests/cassettes/episode/Band of Brothers/: episode-5.yaml
tests/cassettes/episode/Psych/: episode-10.yaml
tests/cassettes/episodes/: Band of Brothers.yaml  Battlestar Galactica.yaml  Psych.yaml
tests/cassettes/exceptions/bad_api_key/: Band of Brothers.yaml
tests/cassettes/exceptions/limit_reached/: order.yaml
tests/cassettes/exceptions/no_results/: Band of Brothers.yaml  Random Movie Title.yaml  tt596799.yaml
tests/cassettes/exceptions/too_many_results/: A.yaml
tests/cassettes/get/: Despicable Me.yaml  tt1323594.yaml
tests/cassettes/movie/: Apollo 13.yaml  tt0190332.yaml
tests/cassettes/search/: Band of Brothers.yaml  Man From Snowy River.yaml
tests/cassettes/search/movie/: malcolm.yaml
tests/cassettes/search/series/: malcolm.yaml
tests/cassettes/series/: Band of Brothers.yaml  Battlestar Galactica.yaml  Game of Thrones.yaml
